force-app/main/default/objects/Project_Location__c/Project_Location__c.object-meta.xml
<CustomObject>
    <label>Project Location</label>
    <nameField>
        <label>Project Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>