force-app/main/default/objects/Project_Location__c/fields/Approver_L2__c.field-meta.xml
<CustomField>
    <fullName>Approver_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>