force-app/main/default/objects/Project_Location__c/fields/CP_Sourcing_Head__c.field-meta.xml
<CustomField>
    <fullName>CP_Sourcing_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For CP Registration</inlineHelpText>
    <label>CP Sourcing Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Locations3</relationshipName>
    <type>Lookup</type>
</CustomField>