force-app/main/default/objects/Project_Location__c/fields/Project_Waived_Limit__c.field-meta.xml
<CustomField>
    <fullName>Project_Waived_Limit__c</fullName>
    <label>Project Waived Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>