force-app/main/default/objects/Project_Location__c/listViews/All_Project_Locations.listView-meta.xml
<ListView>
    <fullName>All_Project_Locations</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>